--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
     font-family: sans-serif;
 }
 
-.containe{
+.container{
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #0ad8abc5;
+    background: #333333c5;
 }
 
 form{
@@ -43,7 +43,7 @@ form input,textarea{
 
 form button{
     padding: 15px;
-    background: #0e7c33;
+    background: #a1a3a2;
     color: #fff;
     font-size: 18px;
     border: 0;
@@ -55,5 +55,5 @@ form button{
 }
 
 button:hover{
-    background-color: #555;
+    background-color: #7a7878;
 }
